--- a/aula_15-10-24/introducaoReact.html
+++ b/aula_15-10-24/introducaoReact.html
@@ -10,7 +10,9 @@
     <button onclick="window.location.href='http://instagram.com'">Ir para o Instagram</button>
     <button onclick="window.location.href='recepcao.html'">Home</button> <br> <br>
     <button onclick="window.location.href=window.location.href">Recarregar a página</button> <br><br>
-    <button onclick="entrarEmContato()">Contato</button>
+    <button onclick="conhecaNossaEquipe()">Equipe</button> <br><br>
+    <button onclick="entrarEmContato()">Contato</button> 
+
 
     <script src="adicionais.js"></script>
     <script src="script.js"></script>
